// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is disabled 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateClassName": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateClassName": [Function],
            "plugins": Array [
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessStyle": [Function],
                "onUpdate": [Function],
              },
              Object {
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessRule": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessRule": [Function],
                "onProcessSheet": [Function],
              },
            ],
          },
          "plugins": PluginsRegistry {
            "hooks": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "9.8.7",
        }
      }
    >
      <Jss(Button)
        isDisabled={true}
        onClick={[Function]}
      >
        <Button
          classes={
            Object {
              "big": "HoiPoi-Button-big-0-2-10",
              "danger": "HoiPoi-Button-danger-0-2-8",
              "default": "HoiPoi-Button-default-0-2-6",
              "disabled": "HoiPoi-Button-disabled-0-2-11",
              "fullWidth": "HoiPoi-Button-fullWidth-0-2-12",
              "label": "HoiPoi-Button-label-0-2-2",
              "labelLoading": "HoiPoi-Button-labelLoading-0-2-3",
              "loader": "HoiPoi-Button-loader-0-2-4",
              "outlined": "HoiPoi-Button-outlined-0-2-5",
              "primary": "HoiPoi-Button-primary-0-2-7",
              "root": "HoiPoi-Button-root-0-2-1",
              "small": "HoiPoi-Button-small-0-2-9",
            }
          }
          isDisabled={true}
          onClick={[Function]}
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
        >
          <button
            className="HoiPoi-Button-root-0-2-1 HoiPoi-Button-default-0-2-6 HoiPoi-Button-primary-0-2-7 HoiPoi-Button-disabled-0-2-11"
            onClick={null}
            theme={
              Object {
                "colors": Object {
                  "danger": "#f04540",
                  "dangerDark": "#C43833",
                  "grey": "#697782",
                  "lightBlack": "#5f656b",
                  "lightGray": "#F7F8F9",
                  "primary": "#00CED1",
                  "primaryDark": "#00a0a0",
                  "text": Object {
                    "danger": "white",
                    "default": "#697782",
                    "primary": "white",
                  },
                },
                "effects": Object {
                  "buttonActive": Object {
                    "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                  },
                },
                "typography": Object {
                  "button": Object {
                    "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": 11,
                    "lineHeight": 1.5,
                  },
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSizeBase": 13,
                  "lineHeightBase": 1.5,
                },
              }
            }
          >
            <span
              className=""
            >
              <span
                className="HoiPoi-Button-label-0-2-2"
              >
                Hello
              </span>
            </span>
          </button>
        </Button>
      </Jss(Button)>
    </JssProvider>
  </ThemeProvider>
</_default>
`;

exports[`Button is rendered as a link 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateClassName": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateClassName": [Function],
            "plugins": Array [
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessStyle": [Function],
                "onUpdate": [Function],
              },
              Object {
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessRule": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessRule": [Function],
                "onProcessSheet": [Function],
              },
            ],
          },
          "plugins": PluginsRegistry {
            "hooks": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "9.8.7",
        }
      }
    >
      <Jss(Button)
        href="https://hello.com"
      >
        <Button
          classes={
            Object {
              "big": "HoiPoi-Button-big-0-2-10",
              "danger": "HoiPoi-Button-danger-0-2-8",
              "default": "HoiPoi-Button-default-0-2-6",
              "disabled": "HoiPoi-Button-disabled-0-2-11",
              "fullWidth": "HoiPoi-Button-fullWidth-0-2-12",
              "label": "HoiPoi-Button-label-0-2-2",
              "labelLoading": "HoiPoi-Button-labelLoading-0-2-3",
              "loader": "HoiPoi-Button-loader-0-2-4",
              "outlined": "HoiPoi-Button-outlined-0-2-5",
              "primary": "HoiPoi-Button-primary-0-2-7",
              "root": "HoiPoi-Button-root-0-2-1",
              "small": "HoiPoi-Button-small-0-2-9",
            }
          }
          href="https://hello.com"
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
        >
          <a
            className="HoiPoi-Button-root-0-2-1 HoiPoi-Button-default-0-2-6 HoiPoi-Button-primary-0-2-7"
            href="https://hello.com"
            theme={
              Object {
                "colors": Object {
                  "danger": "#f04540",
                  "dangerDark": "#C43833",
                  "grey": "#697782",
                  "lightBlack": "#5f656b",
                  "lightGray": "#F7F8F9",
                  "primary": "#00CED1",
                  "primaryDark": "#00a0a0",
                  "text": Object {
                    "danger": "white",
                    "default": "#697782",
                    "primary": "white",
                  },
                },
                "effects": Object {
                  "buttonActive": Object {
                    "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                  },
                },
                "typography": Object {
                  "button": Object {
                    "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": 11,
                    "lineHeight": 1.5,
                  },
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSizeBase": 13,
                  "lineHeightBase": 1.5,
                },
              }
            }
          >
            <span
              className=""
            >
              <span
                className="HoiPoi-Button-label-0-2-2"
              >
                Hello
              </span>
            </span>
          </a>
        </Button>
      </Jss(Button)>
    </JssProvider>
  </ThemeProvider>
</_default>
`;

exports[`Button is rendered combining props 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateClassName": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateClassName": [Function],
            "plugins": Array [
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessStyle": [Function],
                "onUpdate": [Function],
              },
              Object {
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessRule": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessRule": [Function],
                "onProcessSheet": [Function],
              },
            ],
          },
          "plugins": PluginsRegistry {
            "hooks": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "9.8.7",
        }
      }
    >
      <Jss(Button)
        color="danger"
        size="big"
        type="outlined"
      >
        <Button
          classes={
            Object {
              "big": "HoiPoi-Button-big-0-2-10",
              "danger": "HoiPoi-Button-danger-0-2-8",
              "default": "HoiPoi-Button-default-0-2-6",
              "disabled": "HoiPoi-Button-disabled-0-2-11",
              "fullWidth": "HoiPoi-Button-fullWidth-0-2-12",
              "label": "HoiPoi-Button-label-0-2-2",
              "labelLoading": "HoiPoi-Button-labelLoading-0-2-3",
              "loader": "HoiPoi-Button-loader-0-2-4",
              "outlined": "HoiPoi-Button-outlined-0-2-5",
              "primary": "HoiPoi-Button-primary-0-2-7",
              "root": "HoiPoi-Button-root-0-2-1",
              "small": "HoiPoi-Button-small-0-2-9",
            }
          }
          color="danger"
          size="big"
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
          type="outlined"
        >
          <button
            className="HoiPoi-Button-root-0-2-1 HoiPoi-Button-outlined-0-2-5 HoiPoi-Button-danger-0-2-8 HoiPoi-Button-big-0-2-10"
            theme={
              Object {
                "colors": Object {
                  "danger": "#f04540",
                  "dangerDark": "#C43833",
                  "grey": "#697782",
                  "lightBlack": "#5f656b",
                  "lightGray": "#F7F8F9",
                  "primary": "#00CED1",
                  "primaryDark": "#00a0a0",
                  "text": Object {
                    "danger": "white",
                    "default": "#697782",
                    "primary": "white",
                  },
                },
                "effects": Object {
                  "buttonActive": Object {
                    "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                  },
                },
                "typography": Object {
                  "button": Object {
                    "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": 11,
                    "lineHeight": 1.5,
                  },
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSizeBase": 13,
                  "lineHeightBase": 1.5,
                },
              }
            }
          >
            <span
              className=""
            >
              <span
                className="HoiPoi-Button-label-0-2-2"
              >
                ACTION
              </span>
            </span>
          </button>
        </Button>
      </Jss(Button)>
    </JssProvider>
  </ThemeProvider>
</_default>
`;

exports[`Button is rendered without crashes 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateClassName": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateClassName": [Function],
            "plugins": Array [
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessStyle": [Function],
                "onUpdate": [Function],
              },
              Object {
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessRule": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessRule": [Function],
                "onProcessSheet": [Function],
              },
            ],
          },
          "plugins": PluginsRegistry {
            "hooks": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "9.8.7",
        }
      }
    >
      <Jss(Button)>
        <Button
          classes={
            Object {
              "big": "HoiPoi-Button-big-0-2-10",
              "danger": "HoiPoi-Button-danger-0-2-8",
              "default": "HoiPoi-Button-default-0-2-6",
              "disabled": "HoiPoi-Button-disabled-0-2-11",
              "fullWidth": "HoiPoi-Button-fullWidth-0-2-12",
              "label": "HoiPoi-Button-label-0-2-2",
              "labelLoading": "HoiPoi-Button-labelLoading-0-2-3",
              "loader": "HoiPoi-Button-loader-0-2-4",
              "outlined": "HoiPoi-Button-outlined-0-2-5",
              "primary": "HoiPoi-Button-primary-0-2-7",
              "root": "HoiPoi-Button-root-0-2-1",
              "small": "HoiPoi-Button-small-0-2-9",
            }
          }
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
        >
          <button
            className="HoiPoi-Button-root-0-2-1 HoiPoi-Button-default-0-2-6 HoiPoi-Button-primary-0-2-7"
            theme={
              Object {
                "colors": Object {
                  "danger": "#f04540",
                  "dangerDark": "#C43833",
                  "grey": "#697782",
                  "lightBlack": "#5f656b",
                  "lightGray": "#F7F8F9",
                  "primary": "#00CED1",
                  "primaryDark": "#00a0a0",
                  "text": Object {
                    "danger": "white",
                    "default": "#697782",
                    "primary": "white",
                  },
                },
                "effects": Object {
                  "buttonActive": Object {
                    "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                  },
                },
                "typography": Object {
                  "button": Object {
                    "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": 11,
                    "lineHeight": 1.5,
                  },
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSizeBase": 13,
                  "lineHeightBase": 1.5,
                },
              }
            }
          >
            <span
              className=""
            >
              <span
                className="HoiPoi-Button-label-0-2-2"
              >
                Hello
              </span>
            </span>
          </button>
        </Button>
      </Jss(Button)>
    </JssProvider>
  </ThemeProvider>
</_default>
`;

exports[`Button when is loading is disabled too 1`] = `
<_default>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGray": "#F7F8F9",
          "primary": "#00CED1",
          "primaryDark": "#00a0a0",
          "text": Object {
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
        },
        "effects": Object {
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "lineHeightBase": 1.5,
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateClassName": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateClassName": [Function],
            "plugins": Array [
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessStyle": [Function],
                "onUpdate": [Function],
              },
              Object {
                "onProcessRule": [Function],
              },
              Object {
                "onCreateRule": [Function],
                "onProcessRule": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onChangeValue": [Function],
                "onProcessRule": [Function],
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessStyle": [Function],
              },
              Object {
                "onProcessRule": [Function],
                "onProcessSheet": [Function],
              },
            ],
          },
          "plugins": PluginsRegistry {
            "hooks": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "9.8.7",
        }
      }
    >
      <Jss(Button)
        isLoading={true}
        onClick={[Function]}
      >
        <Button
          classes={
            Object {
              "big": "HoiPoi-Button-big-0-2-10",
              "danger": "HoiPoi-Button-danger-0-2-8",
              "default": "HoiPoi-Button-default-0-2-6",
              "disabled": "HoiPoi-Button-disabled-0-2-11",
              "fullWidth": "HoiPoi-Button-fullWidth-0-2-12",
              "label": "HoiPoi-Button-label-0-2-2",
              "labelLoading": "HoiPoi-Button-labelLoading-0-2-3",
              "loader": "HoiPoi-Button-loader-0-2-4",
              "outlined": "HoiPoi-Button-outlined-0-2-5",
              "primary": "HoiPoi-Button-primary-0-2-7",
              "root": "HoiPoi-Button-root-0-2-1",
              "small": "HoiPoi-Button-small-0-2-9",
            }
          }
          isLoading={true}
          onClick={[Function]}
          theme={
            Object {
              "colors": Object {
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGray": "#F7F8F9",
                "primary": "#00CED1",
                "primaryDark": "#00a0a0",
                "text": Object {
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
              },
              "effects": Object {
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "lineHeightBase": 1.5,
              },
            }
          }
        >
          <button
            className="HoiPoi-Button-root-0-2-1 HoiPoi-Button-default-0-2-6 HoiPoi-Button-primary-0-2-7 HoiPoi-Button-disabled-0-2-11"
            onClick={null}
            theme={
              Object {
                "colors": Object {
                  "danger": "#f04540",
                  "dangerDark": "#C43833",
                  "grey": "#697782",
                  "lightBlack": "#5f656b",
                  "lightGray": "#F7F8F9",
                  "primary": "#00CED1",
                  "primaryDark": "#00a0a0",
                  "text": Object {
                    "danger": "white",
                    "default": "#697782",
                    "primary": "white",
                  },
                },
                "effects": Object {
                  "buttonActive": Object {
                    "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                  },
                },
                "typography": Object {
                  "button": Object {
                    "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": 11,
                    "lineHeight": 1.5,
                  },
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSizeBase": 13,
                  "lineHeightBase": 1.5,
                },
              }
            }
          >
            <span
              className="HoiPoi-Button-labelLoading-0-2-3"
            >
              <div
                className="HoiPoi-Button-loader-0-2-4"
              >
                <Jss(Loader)
                  color="white"
                  size="tiny"
                >
                  <Loader
                    classes={
                      Object {
                        "big": "HoiPoi-Loader-big-0-2-10",
                        "danger": "HoiPoi-Loader-danger-0-2-3",
                        "huge": "HoiPoi-Loader-huge-0-2-11",
                        "large": "HoiPoi-Loader-large-0-2-9",
                        "massive": "HoiPoi-Loader-massive-0-2-12",
                        "medium": "HoiPoi-Loader-medium-0-2-8",
                        "mini": "HoiPoi-Loader-mini-0-2-5",
                        "primary": "HoiPoi-Loader-primary-0-2-2",
                        "root": "HoiPoi-Loader-root-0-2-1",
                        "small": "HoiPoi-Loader-small-0-2-7",
                        "tiny": "HoiPoi-Loader-tiny-0-2-6",
                        "white": "HoiPoi-Loader-white-0-2-4",
                      }
                    }
                    color="white"
                    size="tiny"
                    theme={
                      Object {
                        "colors": Object {
                          "danger": "#f04540",
                          "dangerDark": "#C43833",
                          "grey": "#697782",
                          "lightBlack": "#5f656b",
                          "lightGray": "#F7F8F9",
                          "primary": "#00CED1",
                          "primaryDark": "#00a0a0",
                          "text": Object {
                            "danger": "white",
                            "default": "#697782",
                            "primary": "white",
                          },
                        },
                        "effects": Object {
                          "buttonActive": Object {
                            "boxShadow": "inset 0 -2px 4px 0 rgba(122,122,122,0.23)",
                          },
                        },
                        "typography": Object {
                          "button": Object {
                            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                            "fontSize": 11,
                            "lineHeight": 1.5,
                          },
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSizeBase": 13,
                          "lineHeightBase": 1.5,
                        },
                      }
                    }
                  >
                    <div
                      className="HoiPoi-Loader-root-0-2-1 HoiPoi-Loader-white-0-2-4 HoiPoi-Loader-tiny-0-2-6"
                    />
                  </Loader>
                </Jss(Loader)>
              </div>
              <span
                className="HoiPoi-Button-label-0-2-2"
              >
                Hello
              </span>
            </span>
          </button>
        </Button>
      </Jss(Button)>
    </JssProvider>
  </ThemeProvider>
</_default>
`;
